public/stylesheets/sidebar.css
#framewrapper {
    position: fixed;
    top: 0;
    right: 4%;
    width: 25%;
    height: 100%;
    z-index: 101;
    display: none;
}

#frame {
    width: 100%;
    height: 100%;
    z-index: 101;
    right: 4%;
}

.sidebar { /*actual side bar*/
    z-index: 102;
    overflow: auto;
    font-size: 16px;
    font-weight: 200;
    background-color: #B72C2C;
    position: absolute;
    width: 4%;
    right: 0;
    height: 100%;
    color: white;
}

.sidebar ul,
.sidebar li { /* each element in side bar*/
    list-style: none;
    padding: 20px 0 20px 0;
    margin: 0;
    line-height: 50px;
    text-align: center;
    cursor: pointer;
}

.sidebar li:hover {
    background-color: #7D8792;
}

.sidebar li a {
    text-decoration: none;
    color: white;
}

.sidebar li.selected {
    background-color: #4f5b69;
}

